--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,5 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 
+.btn-save{
+	background-color: #1E2973;
+}
+
 label {
 	display: none;
 }
