--- a/WebContent/css/mycss.css
+++ b/WebContent/css/mycss.css
@@ -1,21 +1,91 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 
-body, html { height: 100%; }
+h1{
+	text-align: center;
+	color: #141E5F;
+	font-family: 'Oswald' arial, helvetica, sans-serif;
+	font-size: 45px;
+}
 
-input {display: block; border-radius: 3px 3px 0 0; border: 1px solid #999; box-shadow: 1px 1px 5px rgba(0,0,0,0.2); font-weight: bold; width: 250px; padding: 5px;}
-input[type='password']{border-radius: 0 0 3px 3px; border-top: none; width: 250px;}
-button {margin-top: 5px; background-color: #E5E5E5; background-image: linear-gradient(top, #FFF, #E5E5E5); border: 1px solid #AAA; border-radius: 3px;color: #000;
-        font-size: 0.8em; font-weight: bold; padding: 5px 10px;}
-button:hover {background-color: #285582;}
-button:hover {background-color: #285582; background-image: linear-gradient(top, #3775b3, #285582);border-color: #204569; color: #FFF; 
-              text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.6);}
-button:active {background-color:  #204569; background-image: none; border-color: #1a375a; box-shadow: inset 0 2px 1px rgba(0,0,0,0.15);}
+body, html {
+	height: 100%;
+}
 
-::-webkit-input-placeholder {color: #666; font-style: italic; font-weight: normal;}
-::-moz-placeholder {color: #666; font-style: italic; font-weight: normal;}
--ms-input-placeholder {color: #666; font-style: italic; font-weight: normal;}
+input {
+	display: block;
+	border-radius: 3px 3px 0 0;
+	border: 1px solid #999;
+	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+	font-weight: bold;
+	width: 250px;
+	padding: 5px;
+}
 
-.login-container { display: flex; align-items: center; justify-content: center; height: 100%;}
-.login-container .divcenter {display: inline-block; vertical-align: middle; float: none; text-align: left;}
+input[type='password'] {
+	border-radius: 0 0 3px 3px;
+	border-top: none;
+	width: 250px;
+}
 
+button {
+	margin-top: 5px;
+	background-color: #E5E5E5;
+	background-image: linear-gradient(top, #FFF, #E5E5E5);
+	border: 1px solid #AAA;
+	border-radius: 3px;
+	color: #000;
+	font-size: 0.8em;
+	font-weight: bold;
+	padding: 5px 10px;
+}
 
+button:hover {
+	background-color: #285582;
+}
+
+button:hover {
+	background-color: #285582;
+	background-image: linear-gradient(top, #3775b3, #285582);
+	border-color: #204569;
+	color: #FFF;
+	text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.6);
+}
+
+button:active {
+	background-color: #204569;
+	background-image: none;
+	border-color: #1a375a;
+	box-shadow: inset 0 2px 1px rgba(0, 0, 0, 0.15);
+}
+
+::-webkit-input-placeholder {
+	color: #666;
+	font-style: italic;
+	font-weight: normal;
+}
+
+::-moz-placeholder {
+	color: #666;
+	font-style: italic;
+	font-weight: normal;
+}
+
+-ms-input-placeholder {
+	color: #666;
+	font-style: italic;
+	font-weight: normal;
+}
+
+.login-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+}
+
+.login-container .divcenter {
+	display: inline-block;
+	vertical-align: middle;
+	float: none;
+	text-align: left;
+}
