WORKING ON PASSWORD AND MD5

--- a/WebContent/css/mycss.css
+++ b/WebContent/css/mycss.css
@@ -2,7 +2,7 @@
 
 h1{
 	text-align: center;
-	color: #141E5F;
+	color: #B80700;
 	font-family: 'Oswald' arial, helvetica, sans-serif;
 	font-size: 45px;
 }
