--- a/WebContent/css/ie8.css
+++ b/WebContent/css/ie8.css
@@ -1,52 +1,39 @@
-/*
-	Prologue by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+section > .last-child,
+section.last-child,
+article > .last-child,
+article.last-child {
+    margin-bottom: 0;
+}
 
-/* Section/Article */
+form input[type="text"],
+form input[type="email"],
+form input[type="password"],
+form select,
+form textarea {
+    -ms-behavior: url("assets/js/ie/PIE.htc");
+}
 
-	section > .last-child, section.last-child, article > .last-child, article.last-child {
-		margin-bottom: 0;
-	}
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+button,
+.button {
+    -ms-behavior: url("assets/js/ie/PIE.htc");
+}
 
-/* Form */
+#nav ul li a {
+    color: #888;
+}
 
-	form input[type="text"],
-	form input[type="email"],
-	form input[type="password"],
-	form select,
-	form textarea {
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
+#nav ul li a.active {
+    background: #1C2022;
+}
 
-/* Button */
+#headerToggle .toggle {
+    background-color: #888;
+}
 
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	button,
-	.button {
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
-/* Header */
-
-	#nav ul li a {
-		color: #888;
-	}
-
-		#nav ul li a.active {
-			background: #1C2022;
-		}
-
-	#headerToggle .toggle {
-		background-color: #888;
-	}
-
-/* Main */
-
-	#main > section.cover {
-		background-position: auto;
-		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
-	}
+#main > section.cover {
+    background-position: auto;
+    -ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+}
