--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1612,6 +1612,8 @@
 		}
 
 	footer {
+		position:absolute;
+		bottom:0;
 		margin: 2em 0 0 0;
 	}
 
@@ -2087,7 +2089,7 @@
 		margin-left: 375px;
 		text-align: center;
 		background-color: #dce3e2;
-		padding: 3em 0 4em 0;
+		padding: 1em 0 1em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
 	}
