--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1564,6 +1564,15 @@
 			-ms-animation: none !important;
 			animation: none !important;
 		}
+	
+	#idCombox2{
+		border-radius: 3px 3px 3px 3px; 
+        border: 1px solid #999;
+        font-weight: bold; 
+        width: 350px; 
+        padding: 5px; 
+        text-align: center;
+	}
 
 	input, textarea, select {
 		font-family: 'Source Sans Pro', sans-serif;
