--- a/WebContent/css/mycss.css
+++ b/WebContent/css/mycss.css
@@ -1,9 +1,9 @@
-@import url(http://fonts.googleapis.com/css?family=Oswald);
+@import url(http://fonts.googleapis.com/css?family=Bangers);
 
 h1{
 	text-align: center;
-	color: #B80700;
-	font-family: 'Oswald' arial, helvetica, sans-serif;
+	color: #41d6c3;
+	font-family: 'Bangers' arial, helvetica, sans-serif;
 	font-size: 45px;
 }
 
